# breast-cancer-ml-coach

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: generate_visuals.py
src/ml_project/: __init__.py  cli.py  config.py  data.py  metrics.py  model.py  persistence.py  pipeline.py
tests/: test_pipeline.py
